--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@ plugins {
 	id 'java'
 }
 
+ext {
+	domaVersion = '2.24.0'
+	lombokVersion = '1.18.6'
+}
+
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.example'
@@ -19,4 +24,8 @@ dependencies {
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	// Lombok
+	compileOnly "org.projectlombok:lombok:${lombokVersion}"
+	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 }
