--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,18 @@ ext {
 	lombokVersion = '1.18.6'
 }
 
+/*
+ * Doma-Gen settings
+ */
+def dbUrl = 'jdbc:postgresql://127.0.0.1:5432/testdb'
+def dbUser = 'db_user'
+def dbPassword = 'abcd1234'
+def basePackage = 'com.example.springbootboilerplate'
+
+configurations {
+    domaGenRuntime
+}
+
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.example'
@@ -28,4 +40,78 @@ dependencies {
 	// Lombok
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+	
+	// Doma
+	implementation 'org.seasar.doma.boot:doma-spring-boot-starter:1.1.1'
+    implementation "org.seasar.doma:doma:${domaVersion}"
+	annotationProcessor "org.seasar.doma:doma:${domaVersion}"
+	
+	// Doma-Gen
+	domaGenRuntime "org.seasar.doma:doma-gen:${domaVersion}"
+    domaGenRuntime 'org.postgresql:postgresql'
+}
+
+task copyDomaResources(type: Sync) doLast {
+    from sourceSets.main.resources.srcDirs
+    into compileJava.destinationDir
+    include 'doma.compile.config'
+    include 'META-INF/**/*.sql'
+    include 'META-INF/**/*.script'
+}
+
+task domaGen {
+    group = 'doma-gen'
+    doLast {
+        ant.taskdef(resource: 'domagentask.properties',
+            classpath: configurations.domaGenRuntime.asPath)
+        ant.gen(
+        	url: "${dbUrl}",
+			user: "${dbUser}",
+			password: "${dbPassword}",
+			versionColumnNamePattern: 'version',
+			templatePrimaryDir: 'doma-template'
+        ) {
+	        entityConfig(
+				packageName: "${basePackage}.entity",
+				overwrite: true,
+				overwriteListener: true
+			)
+	        daoConfig(
+				packageName: "${basePackage}.dao",
+				overwrite: true,
+			)
+	        sqlConfig(
+				overwrite: true,
+			)
+        }
+    }
+}
+
+task domaGenTestCases {
+    group = 'doma-gen'
+    doLast {
+        ant.taskdef(resource: 'domagentask.properties',
+            classpath: configurations.domaGenRuntime.asPath)
+        ant.gen(
+        	url: "${dbUrl}",
+			user: "${dbUser}",
+			password: "${dbPassword}",
+        ) {
+            sqlTestCaseConfig {
+                fileset(dir: 'src/main/resources') {
+                    include(name: 'META-INF/**/*.sql')
+                }
+            }
+        }
+    }
+}
+
+compileJava {
+    dependsOn copyDomaResources
+    options.encoding = 'UTF-8'
+}
+
+compileTestJava {
+    options.encoding = 'UTF-8'
+    options.compilerArgs = ['-proc:none']
 }
